--- a/requirements.txt
+++ b/requirements.txt
@@ -3,4 +3,6 @@ Flask-RESTful==0.3.7
 Pyrebase==3.0.27
 Flask-Login==0.4.1
 Flask-Session==0.3.1
-python-memcached==1.59
+wtforms==2.2.1
+Flask-WTF==0.14.2
+Werkzeug==0.16.0
